# halo2-franchise-proof

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: franchise.rs
src/: franchise.rs  lib.rs  rustfmt.toml  utils.rs
src/circuit/gadget/: mod.rs  poseidon.rs  utilities.rs
src/circuit/gadget/poseidon/: pow5t3.rs
src/circuit/gadget/utilities/: cond_swap.rs
src/primitives/: poseidon.rs
src/primitives/poseidon/: grain.rs  mds.rs  p128pow5t3.rs
